# mpv-inhibit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/offlrofl/: connection.h  error.h  message.h
src/: inhibit.cpp
src/offlrofl/: connection.cpp  error.cpp  generate_interface.cpp  message.cpp
